# AokoContainer

./: Android.bp  CMakeLists.txt  clrc_main.cpp  clrd.cpp  clrd.rc  clrd_child_main.cpp  clrd_child_main.h  clrd_linuxinit.cpp  clrd_linuxinit.h  clrd_loop.cpp  clrd_loop.h  clrd_mount.cpp  clrd_mount.h  clrd_namespace.cpp  clrd_namespace.h  clrd_selinux.cpp  clrd_selinux.h
fuse_files/: clrd_fuse.cpp  clrd_fuse.h  resolv.cpp  resolv.h  usergroup.cpp  usergroup.h
lib/: loopdev.cpp  loopdev.h  ns_lib.cpp  ns_lib.h  privileges.cpp  privileges.h
